--- a/docker-files/talking-cow/Dockerfile
+++ b/docker-files/talking-cow/Dockerfile
@@ -1,4 +1,5 @@
 FROM ubuntu:latest
 RUN apt-get update ; apt-get -y install fortune ; apt-get -y install cowsay;
-ADD talking-cow.sh /bin/talking-cow.sh
-ENTRYPOINT echo 'test'
+WORKDIR /app/src
+ADD talking-cow.sh .
+ENTRYPOINT talking-cow.sh
