--- a/docker-files/talking-cow/Dockerfile
+++ b/docker-files/talking-cow/Dockerfile
@@ -1,5 +1,4 @@
 FROM ubuntu:latest
-RUN apt-get update ; apt-get -y install fortune ; apt-get -y install cowsay;
-WORKDIR /app/src
-ADD talking-cow.sh .
-ENTRYPOINT talking-cow.sh
+RUN apt-get update ; apt-get -y install fortune
+ADD talking-cow.sh /bin/talking-cow.sh
+ENTRYPOINT /bin/talking-cow.sh
