commmitting the changes

--- a/docker-files/talking-cow/Dockerfile
+++ b/docker-files/talking-cow/Dockerfile
@@ -1,4 +1,7 @@
-FROM ubuntu:latest
-RUN apt-get update ; apt-get -y install fortune
-ADD talking-cow.sh /bin/talking-cow.sh
-ENTRYPOINT /bin/talking-cow.sh
+FROM alpine
+
+ADD talkingcow.sh /
+
+RUN apk update && apk add --no-cache fortune && chmod +x talkingcow.sh
+
+ENTRYPOINT ["fortune"]
