--- a/volumes/gitrepo-volume.yaml
+++ b/volumes/gitrepo-volume.yaml
@@ -1,21 +1,31 @@
 apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: ReplicaSet
 metadata:
-  name: gitrepo-volume-pod
-spec:
-  containers:
-  - image: nginx:alpine
-    name: web-server
-    volumeMounts:
-    - name: html
-      mountPath: /usr/share/nginx/html
-      readOnly: true
-    ports:
-    - containerPort: 80
-      protocol: TCP
-  volumes:
-  - name: html
-    gitRepo:
-      repository: https://github.com/prashdeep/kubia-website-example.git
-      revision: master
-      directory: .
+  name: gitrepo-rs
+spec: 
+  replicas: 2
+  selector:
+    matchLabels: 
+      app: git-backed-volume
+  template: 
+    metadata: 
+      labels: 
+        app: git-backed-volume
+    spec:
+      containers:
+      - name: web-server
+        image: nginx:alpine
+        volumeMounts:
+        - name: html
+          mountPath: /usr/share/nginx/html
+          readOnly: true
+        ports:
+        - containerPort: 80
+          protocol: TCP
+      volumes:
+      - name: html
+        gitRepo:
+          repository: https://github.com/prashdeep/kubia-website-example.git
+          revision: master
+          directory: .
