--- a/volumes/git-repo-ingress.yaml
+++ b/volumes/git-repo-ingress.yaml
@@ -7,7 +7,7 @@ spec:
   - host: hostnameservice.classpath.com
     http:
       paths:
-      - path: /
+      - path: /gitrepo
         backend:
           serviceName: git-repo-service
           servicePort: 80
