--- a/ingress/hn-service-ingress-https.yaml
+++ b/ingress/hn-service-ingress-https.yaml
@@ -13,5 +13,5 @@ spec:
       paths:
       - path: /
         backend:
-          serviceName: git-repo-service
+          serviceName: hostname-service
           servicePort: 80
