committing the changes

--- a/volumes/aws-pvc-with-storage-class.yaml
+++ b/volumes/aws-pvc-with-storage-class.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mongodb-pvc
+  name: mongodb-sc-pvc
 spec:
   storageClassName: standard
   resources:
