--- a/volumes/mongodb-with-pvc.yaml
+++ b/volumes/mongodb-with-pvc.yaml
@@ -15,4 +15,4 @@ spec:
   volumes:
   - name: mongodb-data
     persistentVolumeClaim:
-      claimName: mongodb-pvc
+      claimName: mongodb-sc-pvc
