committing the changes

--- a/docker-files/talking-cow-args/Dockerfile
+++ b/docker-files/talking-cow-args/Dockerfile
@@ -5,3 +5,4 @@ ADD talkingcow-args.sh /
 RUN apk update && apk add --no-cache fortune && chmod +x talkingcow-args.sh
 
 ENTRYPOINT ["/bin/sh", "talkingcow-args.sh"]
+CMD [ "10" ]
