--- a/config-maps/pod-fortune-env.yaml
+++ b/config-maps/pod-fortune-env.yaml
@@ -1,7 +1,10 @@
 apiVersion: v1
 kind: Pod
+metadata:
+  name: talkingcow-args
 spec:
   containers:
+    name: talkingcow-args-args
   - image: classpathio/talking-cow-args
     args: ["4"]
 
