--- a/config-maps/pod-fortune-env.yaml
+++ b/config-maps/pod-fortune-env.yaml
@@ -1,10 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: talkingcow-args
+  name: talkingcow-env
 spec:
   containers:
-    name: talkingcow-args-args
-  - image: classpathio/talking-cow-args
-    args: ["4"]
-
+  - image: classpathio/talking-cow-env
+    name: talkingcow-env-container
+    env:
+    - name: INTERVAL
+      value: 15
