committing the config maps directory

--- a/config-maps/pod-fortune-arg.yaml
+++ b/config-maps/pod-fortune-arg.yaml
@@ -4,7 +4,7 @@ metadata:
   name: talkingcow-args
 spec:
   containers:
-    name: talkingcow-args-args
   - image: classpathio/talking-cow-args
+    name: talkingcow-args
     args: ["4"]
 
