--- a/config-maps/pod-fortune-configmap-args.yaml
+++ b/config-maps/pod-fortune-configmap-args.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: talkingcow-configmap
+  name: talkingcow-configmap-args
 spec:
   containers:
   - image: classpathio/talking-cow-env
@@ -12,3 +12,4 @@ spec:
         configMapKeyRef: 
           name: fortune-interval-4
           key: sleep-interval
+    args: ["$(INTERVAL)"]      
