--- a/config-maps/pod-fortune-configmap-env.yaml
+++ b/config-maps/pod-fortune-configmap-env.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: talkingcow-configmap
+  name: talkingcow-configmap-env
 spec:
   containers:
   - image: classpathio/talking-cow-env
