--- a/config-maps/pod-nginx-configmap-volume.yaml
+++ b/config-maps/pod-nginx-configmap-volume.yaml
@@ -1,14 +1,19 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: talkingcow-configmap-env
+  name: nginx-configmap-volume
 spec:
   containers:
-  - image: classpathio/talking-cow-env
-    name: talkingcow-env-configmap-container
-    env:
-    - name: INTERVAL
-      valueFrom:
-        configMapKeyRef: 
-          name: fortune-interval-4
-          key: sleep-interval
+  - image: nginx:apline
+    name: webserver
+    volumeMounts:
+        - name: configuration
+          mountPath: /etc/nginx/conf.d
+          readOnly: true
+        ports:
+        - containerPort: 80
+          protocol: TCP
+      volumes:
+      - name: configuration
+        configMap:
+          name: nginx-config
