committing the config file for nginx pod

--- a/config-maps/pod-nginx-configmap-volume.yaml
+++ b/config-maps/pod-nginx-configmap-volume.yaml
@@ -4,7 +4,7 @@ metadata:
   name: nginx-configmap-volume
 spec:
   containers:
-  - image: nginx:apline
+  - image: nginx:alpine
     name: webserver
     volumeMounts:
     - name: configuration
