committing the changes

--- a/config-maps/config-map-files/nginx-configuration.conf
+++ b/config-maps/config-map-files/nginx-configuration.conf
@@ -1,6 +1,6 @@
 server {
-  listen              80;
-  server_name         www.kubia-example.com;
+  listen              82;
+  server_name         www.classpath.io;
 
   gzip on;
   gzip_types text/plain application/xml;
