committing the changes to add ssl support

--- a/config-maps/config-map-files/nginx-configuration.conf
+++ b/config-maps/config-map-files/nginx-configuration.conf
@@ -1,9 +1,9 @@
 server {
   listen              82;
-  listen              443 ssl;
+  #listen              443 ssl;
   server_name         www.classpath.io;
-  ssl_certificate     certs/https.cert;
-  ssl_certificate_key certs/https.key;
+  #ssl_certificate     certs/https.cert;
+  #ssl_certificate_key certs/https.key;
 
   gzip on;
   gzip_types text/plain application/xml;
