--- a/config-maps/pod-nginx-configmap-https.yaml
+++ b/config-maps/pod-nginx-configmap-https.yaml
@@ -14,7 +14,7 @@ spec:
     - name: INTERVAL
       valueFrom:
         configMapKeyRef:
-          name: nginx-config
+          name: nginx-conf
           key: sleep-interval
   - image: nginx:alpine
     name: web-server
