--- a/Replica-Sets/order-microservice-dep.yaml
+++ b/Replica-Sets/order-microservice-dep.yaml
@@ -16,9 +16,10 @@ spec:
       - image: classpathio/order-microservice:4.0.0
         name: order-service-container
         readinessProbe:
-          httpGet:
-            path: /test
-            port: 8222        
+          exec:
+            command:
+            - ls        
+            - /status  
           initialDelaySeconds: 10  
           periodSeconds: 5
         ports:
