committing the replicasets

--- a/Replica-Sets/order-microservice-rs.yaml
+++ b/Replica-Sets/order-microservice-rs.yaml
@@ -26,4 +26,4 @@ spec:
       volumes:
       - name: app-config-map
         configMap: 
-          name: order-service-config-map
+          name: order-service-cm
