--- a/ingress/order-ingress.yaml
+++ b/ingress/order-ingress.yaml
@@ -6,21 +6,18 @@ metadata:
 #    ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+
 spec:
   tls:
   - hosts:
     - classpath.com
-    secretName: tls-secret
+    secretName: orders-secret
   rules:
   - host: classpath.com
     http:
       paths:
-        - path: /order
+        - path: /api/v1/orders
           backend:
             serviceName: order-service
             servicePort: 80
-        - path: /inventory
-          backend:
-            serviceName: inventory-service
-            servicePort: 81
